bin/css/nav.css
/**
 * This file contains header bar and page navigation styles
 */

.slideout-panel {
    background-color: var(--qui-colors-body-bgColor) !important;
}

/**
 * Header bar
 */
.header-bar:not(.header-bar--style-none) {
    /* control MegaMenu */
    --qui-megaMenu-link-color: var(--qui-nav-link-color);
    --qui-megaMenu-link-color--hover: var(--qui-nav-link-color--hover);
    --qui-megaMenu-link-bgColor--hover: var(--qui-nav-link-bgColor--hover);

    /* template */
    --_bg: var(--qui-nav-bgColor);
}

/* header bar styling */
.header-bar {
    position: var(--qui-nav-position);
    -moz-transform: translateZ(0);
    -ms-transform: translateZ(0);
    /* fix jumping nav in chrome */
    -o-transform: translateZ(0);
    -webkit-transform: translateZ(0);
    transform: translateZ(0);
    transition: 0.25s all ease-in-out;
    width: 100%;
    z-index: 10;
    top: 0;
}

.header-bar .header-bar-container {
    transition: 0.25s all ease-in-out;
    height: var(--qui-nav-height);
    background-color: var(--_bg);
}

.header-bar-inner {
    max-width: var(--qui-nav-maxWidth);
    margin-inline: auto;
    align-items: center;
    display: flex;
    height: 100%;
}

.header-bar-inner-nav {
    width: 100%;
    height: 100%;
}

.header-displayed .header-bar--position-fix {
    margin-bottom: calc(-1 * var(--qui-nav-height));
}

.header-displayed .header-bar--position-fix.header-bar--style-pill {
    margin-bottom: calc(-1 * (var(--qui-nav-height) + var(--qui-nav-style--pill-topMargin)));
}

.header-bar--initial-transparent {
    margin-bottom: calc(-1 * var(--qui-nav-height));
}

.header-bar--initial-transparent.header-bar--style-pill {
    margin-bottom: calc(-1 * (var(--qui-nav-height) + var(--qui-nav-style--pill-topMargin)));
}

.header-bar--initial-transparent:not(.header-bar--scrolled) {
    /* control MegaMenu */
    --qui-nav-link-color: var(--qui-nav-initialTransparent-link-color);
    --qui-nav-link-color--hover: var(--qui-nav-initialTransparent-link-color--hover);
    --qui-nav-link-bgColor--hover: var(--qui-nav-initialTransparent-link-bgColor--hover);

    /* template */
    --_bg: transparent;
}

/********/
/* Logo */
/********/
.header-bar-logo {
    margin-right: 1rem;
    padding-block: 10px;
}

.header-bar-logo__link {
    align-items: center;
    display: flex;
    height: 100%;
    max-height: 100%;
}

.header-bar-logo__link:hover {
    background: none;
    box-shadow: none;
}

.header-bar-logo__link > picture {
    height: 100%;
    align-items: center;
    display: flex;
}

/**
 * 1. width and height are set in html file template/menu/prefix.html
 * 2. height is not used as css property
 */
.header-bar-logo__img {
    display: block;
    width: auto; /* 2 */
    height: var(--logo-height); /* 1 */
    max-height: 100%;
}

/* switch logos (for solid and transparent nav) */
.header-bar.header-bar--initial-transparent [data-show-for="solid-nav"] {
    display: none;
}

.header-bar.header-bar--initial-transparent [data-show-for="transparent-nav"] {
    display: block;
}

.header-bar.header-bar--scrolled [data-show-for="solid-nav"] {
    display: block;
}

.header-bar.header-bar--scrolled [data-show-for="transparent-nav"] {
    display: none;
}

/**
 * Mega menu
 */
.quiqqer-menu-megaMenu,
.quiqqer-menu-megaMenu__wrapperDesktop,
.quiqqer-menu-megaMenu__wrapperMobile,
.header-bar-logo {
    height: 100%;
}

.quiqqer-menu-megaMenu .quiqqer-menu-megaMenu-list {
    flex-grow: 1;
    justify-content: var(--qui-nav-alignment);
}

/* mobile menu */
.quiqqer-menu-megaMenu-mobile-openerBtn {
    --qui-btn-color: var(--qui-megaMenu-link-color);
    --qui-btn-bgColor: transparent;
    --qui-btn-borderColor: transparent;
    --qui-btn-color--hover: var(--qui-megaMenu-link-color);
    --qui-btn-bgColor--hover: transparent;
    --qui-btn-borderColor--hover: transparent;

    align-items: center;
}

.quiqqer-menu-megaMenu-mobile-openerBtn :where(.label) {
    display: none;
}

.slideout-menu .page-menu {
    background-color: var(--qui-nav-mobile-bg);
}

.slideout-menu .page-navigation-home,
.slideout-menu .left-menu-a,
.slideout-menu .page-menu-close {
    color: var(--qui-nav-mobile-font-color);
}

/*
 * Header suffix
 */
.header-bar__suffix {
    align-items: center;
    display: flex;
    gap: 1rem;
    margin-left: 1rem;
}

.header-bar__social {
    display: flex;
    flex-wrap: wrap;
    justify-content: end;
    gap: 0.5rem;
}

.header-bar__suffix :is(.social-link, .btn-icon) {
    color: var(--qui-nav-link-color);
    aspect-ratio: 1;
    display: grid;
    min-width: 2em;
    place-items: center;
    text-decoration: none;
    position: relative;
    border-radius: var(--qui-radius-btn);
    padding: 0;
    background: none;
    border: none;
}

.header-bar__suffix :is(.social-link:before, .btn-icon:before) {
    content: '';
    position: absolute;
    inset: -0.375rem;
}

.header-bar__suffix :is(.social-link, .btn-icon):hover {
    background-color: var(--qui-nav-link-bgColor--hover);
}

/*****************/
/* Header search */
/*****************/
.headerBarSearchForm {
    position: relative;
}

.headerBarSearchForm__input {
    color: var(--qui-nav-search-input-color);
    background: var(--qui-nav-search-input-bgColor);
    border-color: var(--qui-nav-search-input-borderColor);
    margin-block: 0;
    padding-block: 0.25rem;
}

.headerBarSearchForm__input::placeholder {
    color: var(--qui-nav-search-input-placeholder-color);
    opacity: 1;
}

.headerBarSearchForm__input::-webkit-input-placeholder {
    color: var(--qui-nav-search-input-placeholder-color);
    opacity: 1;
}

.headerBarSearchForm__input:-ms-input-placeholder {
    color: var(--qui-nav-search-input-placeholder-color);
    opacity: 1;
}

.headerBarSearchForm__input::-ms-input-placeholder {
    color: var(--qui-nav-search-input-placeholder-color);
    opacity: 1;
}

.headerBarSearchForm__input:is(:hover, :focus){
    color: var(--qui-nav-search-input-color--hover);
    background: var(--qui-nav-search-input-bgColor--hover);
    border-color: var(--qui-nav-search-input-borderColor--hover);
}


/**
 * Icon and input
 */

.headerBarSearchForm--inputAndIcon {
    display: flex;
}

.headerBarSearchForm__inputWrapper {
    position: absolute;
    right: -1rem;
    top: 50%;
    transform: translateY(-50%);
    z-index: 1;
    background: var(--qui-nav-bgColor);
    visibility: hidden;
    opacity: 0;
    transition: var(--qui-transition);
}

.headerBarSearchForm[data-show-input="1"] .headerBarSearchForm__inputWrapper {
    visibility: visible;
    right: 0;
    opacity: 1;
}

.headerBarSearchForm__btn {
    position: relative;
    z-index: 1;
}

/*******************/
/* Language switch */
/*******************/
.quiqqer-control-languageswitch-dropdown-arrow {
    color: var(--qui-nav-link-color);
}


@media screen and (max-width: 767px) {
    .page-navigation.page-navigation {
        padding-bottom: 90px;
    }

    .menuMobile-socialBar {
        bottom: 0;
        box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.1);
        left: 0;
        max-width: 500px; /* width of the package/quiqqer/menu/bin/SlideOut */
        position: fixed;
        width: 100%;
        z-index: 101;
        background-color: var(--qui-nav-mobile-social-bar-bg);
        text-align: center;
    }

    .menuMobile-socialBar__title {
        margin-top: 0.5rem;
        color: var(--qui-nav-mobile-font-color);
        font-size: var(--qui-fs-sm);
    }

    .menuMobile-socialBar__icons {
        display: flex;
        flex-wrap: wrap;
        justify-content: center;
        gap: 0.5rem;
        padding: 0.5rem 1rem;
    }

    .menuMobile-socialBar__icons :where(.social-link) {
        position: relative;
        aspect-ratio: 1;
        display: grid;
        min-width: 2em;
        place-items: center;
        text-decoration: none;
        font-size: 1rem;
        border-radius: var(--qui-radius-btn);
        color: var(--qui-nav-mobile-font-color);
    }

    .menuMobile-socialBar__icons :where(.social-link:hover, .social-link:focus) {
        background-color: rgba(0,0,0,0.1);
    }

    .menuMobile-socialBar__icons :where(.social-link:before) {
        content: '';
        position: absolute;
        inset: -0.375rem;
    }
}

/**
 * nav style: default with big buttons
 */
.header-bar--style-defaultWithBigButtons .quiqqer-menu-megaMenu__wrapperDesktop {
    align-items: stretch;
}

.header-bar--style-defaultWithBigButtons .quiqqer-menu-megaMenu-list-item {
    align-items: stretch;
}

.header-bar--style-defaultWithBigButtons .quiqqer-menu-megaMenu-list-item-inner {
    border-radius: 0;
    display: flex;
    gap: 0.5em;
    align-items: center;
}

/**
 * nav style: pill
 */
.header-bar--style-pill {
    overflow: auto;
}

.header-bar--style-pill .header-bar-container {
    max-width: var(--qui-nav-maxWidth);
    margin-inline: auto;
    border-radius: var(--qui-nav-style--pill-radius);
    margin-top: var(--qui-nav-style--pill-topMargin);
    width: calc(100% - 1rem);
}

